--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,203 +1,247 @@
-* {
-    margin: 0;
-    box-sizing: border-box;
+
+.about-sec {
+  /* width: 100vw; */
+  height: 85vh;
+  background: #222222;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  /* justify-content: center; */
+}
+
+.about-heading {
+  width: 30vw;
+  font-family: Inter;
+  font-size: 40px;
+  font-weight: 600;
+  letter-spacing: -3px;
+  margin-bottom: 15px;
+  color: white;
+}
+
+.paraTag2 {
+  width: 30vw;
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 30px;
+  margin-bottom: 20px;
+
+  color: white;
+}
+
+.lists {
+  color: white;
+  width: 30vw;
+  margin-left: -10px;
+}
+
+.join-btn {
+  width: 146px;
+  height: 46px;
+  border-radius: 12px;
+  margin-top: 20px;
+  border: none;
+  background: #ffffff;
+}
+
+
+.image-sec {
+  width: 35vw;
+  height: 60vh;
+  border-radius: 17px;
+  background: #393939;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.about-img {
+  width: 30vw;
+  height: 40vh;
+}
+
+@keyframes slide {
+  from {
+    transform: translateX(0);
   }
-  .aboutUs {
-    width: 100%;
-    height: 500px;
-    background: #222222;
+  to {
+    transform: translateX(-100%);
   }
-  
-  .about-heading {
-    font-family: Inter;
-    font-size: 36px;
-    font-weight: 500;
-    color: #fdfdfd;
-    width: 595px;
-    padding: 100px;
-  }
-  
-  .about-pragh {
-    position: relative;
-    font-family: Inter;
-    font-size: 14px;
-    font-weight: 300;
-    color: #fdfdfd;
-    width: 295px;
-    /* padding: 100px; */
-    margin: 100px;
-    top: -180px;
-    padding-bottom: 0px;
-  }
-  
-  .lists {
-    position: relative;
-    font-family: Inter;
-    font-size: 14px;
-    font-weight: 300;
-    color: #fdfdfd;
-    top: -263px;
-    margin-left: 80px;
-    width: 362px;
-  }
-  
-  .join-btn {
-    position: relative;
-    width: 146px;
-    height: 46px;
-    border-radius: 12px;
-    top: -235px;
-    margin-left: 100px;
-    background: #ffffff;
-  }
-  
-  .frame1 {
-    position: relative;
-    align-items: center;
-    display: flex;
-    justify-content: center;
-    width: 450px;
-    height: 370px;
-    border-radius: 15px;
-    background: #393939;
-    margin: auto;
-    top: -595px;
-    margin-right: 100px;
-  }
-  
-  .poster-img {
-    width: 350px;
-    height: 250px;
-  }
-  
-  .tools-name {
-    width: 100%;
-    height: 120px;
-    background: #090909;
-    opacity: 90%;
-  }
-  
-  @keyframes slide {
-    from {
-      transform: translateX(0);
-    }
-    to {
-      transform: translateX(-100%);
-    }
-  }
-  
-  .logos {
-    overflow: hidden;
-    padding: 30px 0;
-    background: #090909;
-    white-space: nowrap;
-    position: relative;
-  }
-  
-  .logos:before,
-  .logos:after {
-    position: absolute;
-    top: 0;
-    width: 250px;
-    height: 100%;
-    content: "";
-    z-index: 2;
-  }
-  
-  .logos:before {
-    left: 0;
-    background: linear-gradient(to left, rgba(255, 255, 255, 0), #090909);
-  }
-  
-  .logos:after {
-    right: 0;
-    background: linear-gradient(to right, rgba(255, 255, 255, 0), #090909);
-  }
-  
-  .logos:hover .logos-slide {
-    animation-play-state: paused;
-  }
-  
-  .logos-slide {
-    display: inline-block;
-    animation: 15s slide infinite linear;
-  }
-  
-  .logos-slide img {
-    height: 50px;
-    margin: 0 40px;
-  }
-  
-  
-  
-  .tag-sec {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-  }
-  
-  .tag-line {
-    font-family: Inter;
-    font-size: 50px;
-    font-weight: 700;
-    line-height: 78px;
-    letter-spacing: -1px;
-    width: 332px;
-    margin: 100px;
-    margin-bottom: 0px;
-    text-align: left;
-  }
-  
-  .talk-btn {
-    position: relative;
-    width: 128px;
-    height: 48px;
-    border-radius: 8px;
-    color: white;
-    font-family: Inter;
-    font-size: 18px;
-    font-weight: 500;
-    text-align: center;
-    margin: 140px 100px 120px 0;
-    background: #000000;
-  }
-  
-  .services-sec {
-    width: 60vh;
-  }
-  
-  .services-img {
-    width: 55vmin;
-    /* margin-left: 20px; */
-  }
-  
+}
+
+.logos {
+  overflow: hidden;
+  padding: 30px 0;
+  background: #090909;
+  white-space: nowrap;
+  position: relative;
+}
+
+.logos:before,
+.logos:after {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  height: 100%;
+  content: "";
+  z-index: 2;
+}
+
+.logos:before {
+  left: 0;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0), #090909);
+}
+
+.logos:after {
+  right: 0;
+  background: linear-gradient(to right, rgba(255, 255, 255, 0), #090909);
+}
+
+.logos:hover .logos-slide {
+  animation-play-state: paused;
+}
+
+.logos-slide {
+  display: inline-block;
+  animation: 15s slide infinite linear;
+}
+
+.logos-slide img {
+  height: 50px;
+  margin: 0 40px;
+}
+
+
+.tag-sec {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+
+.tag-line {
+  font-family: Inter;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 78px;
+  letter-spacing: -1px;
+  width: 332px;
+  margin: 100px;
+  margin-bottom: 0px;
+  text-align: left;
+}
+
+.talk-btn {
+  position: relative;
+  width: 128px;
+  height: 48px;
+  border-radius: 8px;
+  color: white;
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  margin: 140px 100px 120px 0;
+  background: #000000;
+}
+
+.services-sec {
+  width: 60vh;
+}
+
+.services-img {
+  width: 55vmin;
+  /* margin-left: 20px; */
+}
+
+.services {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+#Unleash {
+  text-align: center;
+}
+
+
+@media (max-width: 1030px) {
   .services {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    flex-wrap: nowrap;
     align-items: center;
-    margin-top: 50px;
+    justify-content: center;
+    margin-left: 20px;
   }
-  
-  #Unleash {
-    text-align: center;
+
+  .services-img {
+    width: 30vmin;
   }
-  
-  @media (max-width: 1030px) {
-    .services {
-      flex-wrap: nowrap;
-      align-items: center;
-      justify-content: center;
-      margin-left: 20px;
+}
+
+
+
+@media(max-width: 1024px){
+
+  .about-sec{
+    height: 65vh;
+  }
+
+    .about-heading{
+        width: 47vw;
     }
-  
-    .services-img {
-      width: 30vmin;
+
+    .paraTag2{
+        width: 46vw;
     }
+
+    .image-sec{
+        height: 40vh;
+    }
+
+    .about-img{
+        height: 30vh;
+    }
+
+
+    
+
+}
+
+@media(max-width: 555px){
+
+  .about-sec{
+    height: 65vh;
   }
-  
-  @media (max-width: 555px) {
-    .services {
+  .about-heading{
+    font-size: 17px;
+    letter-spacing: 0;
+  }
+
+  .paraTag2{
+    font-size: 12px;
+    line-height: 20px;
+  }
+
+  .lists{
+    font-size: 12px;
+    width: 42vw;
+    margin-left: -28px;
+  }
+
+  .image-sec{
+    width: 45vw;
+  }
+
+  .about-img{
+    height: 22vh;
+    width: 38vw;
+  }
+
+
+  .services {
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
@@ -217,97 +261,4 @@
     .talk-btn{
       margin: -20px 0 0 32px;
     }
-  }
-  
-  
-  @media (max-width: 1024px) {
-    .frame1 {
-      margin-right: 42px;
-    }
-  
-    .about-heading {
-      padding-left: 42px;
-    }
-  
-    .about-pragh {
-      margin-left: 44px;
-    }
-  
-    .lists {
-      margin-left: 30px;
-    }
-  
-    .join-btn {
-      margin-left: 45px;
-    }
-  }
-  
-  @media(max-width: 877px){
-  
-    .about-heading{
-      font-size: 31px;
-      padding-left: 23px;
-    }
-  
-    .about-pragh{
-      margin-left: 23px;
-    }
-  
-    .lists{
-      margin-left: -9px;
-    }
-  
-    .join-btn{
-      margin-left: 23px;
-    }
-      .frame1{
-          width: 375px;
-          height: 350px;
-          margin-right: 20px;
-      }
-  }
-  
-  @media(max-width: 550px){
-  
-    .about-heading{
-      font-size: 12px;
-      width: 256px;
-    }
-  
-    .about-pragh{
-      font-size: 10px;
-      width: 175px;
-    }
-  
-    .lists{
-      font-size: 10px;
-      width: 170px;
-    }
-  
-    .join-btn{
-      width: 110px;
-    }
-  
-    .poster-img{
-      width: 180px;
-      height: 180px;
-    }
-  
-  
-  
-    .frame1{
-      width: 200px;
-      height: 300px;
-      top: -540px;
-    }
-  
-  }
-  
-  @media(max-width: 387px){
-    .frame1{
-      display: none;
-    }
-    .poster-img{
-      display: none;
-    }
-  }
+}
