--- a/src/css/Nav.css
+++ b/src/css/Nav.css
@@ -64,6 +64,7 @@
 .nav-link {
   text-decoration: none;
   color: #000;
+  cursor: pointer;
 }
 .lets-talk {
   border-radius: 10px;
@@ -128,7 +129,7 @@
 }
 .menu-open{
   transform: rotate(-90deg);
-  height: 30%;
+  height: 25px;
   display: flex;
   width: 30px;
   flex-direction: column;
@@ -150,7 +151,7 @@
     height: 30px;
   }
   .lets-talk {
-    width: 95px;
+    width: 98px;
   }
   .right-nav {
     width: 100px;
@@ -172,7 +173,7 @@
   }
   .mobile-nav {
     position: absolute;
-    top: 70px;
+    top: 50px;
     right: 30px;
     display: flex;
     width: 120px;
