--- a/src/css/About.css
+++ b/src/css/About.css
@@ -1,4 +1,3 @@
-
 .about-sec {
   /* width: 100vw; */
   height: 85vh;
@@ -104,7 +103,7 @@
 
 .logos-slide {
   display: inline-block;
-  animation: 15s slide infinite linear;
+  animation: 30s slide infinite linear;
 }
 
 .logos-slide img {
@@ -152,7 +151,7 @@
 
 .services-img {
   width: 55vmin;
-  /* margin-left: 20px; */
+  margin-left: 20px;
 }
 
 .services {
@@ -178,6 +177,8 @@
 
   .services-img {
     width: 30vmin;
+    margin-left: 0px;
+
   }
 }
 
