--- a/src/css/Hero.css
+++ b/src/css/Hero.css
@@ -176,10 +176,10 @@
 .box {
   position: absolute;
   width: 220px;
-  left:16px;
+  left: 16px;
   top: -7px;
 }
-.elements1{
+.elements1 {
   left: 65px;
   top: 60px;
   width: 130px;
@@ -187,7 +187,7 @@
   position: absolute;
   z-index: 10;
 }
-.elements2{
+.elements2 {
   right: 160px;
   bottom: 70px;
   width: 140px;
@@ -235,10 +235,10 @@
   position: absolute;
 }
 @media screen and (max-width: 1320px) {
-  .hero-bottom{
+  .hero-bottom {
     width: 100%;
   }
-  .hero-img2{ 
+  .hero-img2 {
     left: 300px;
   }
 }
@@ -256,24 +256,24 @@
     width: 470px;
     font-size: 30px;
   }
-  .hero-img1{
+  .hero-img1 {
     width: 50%;
     height: 380px;
   }
-  .hero-img2{
+  .hero-img2 {
     left: 250px;
     height: 300px;
   }
-  .box{
+  .box {
     width: 205px;
-    left:24px;
+    left: 24px;
   }
-  .elements1{
+  .elements1 {
     left: 60px;
     top: 30px;
     transform: scale(0.9);
   }
-  .elements2{
+  .elements2 {
     right: 120px;
     bottom: 50px;
     transform: scale(0.9);
@@ -284,28 +284,29 @@
     width: 440px;
     font-size: 28px;
   }
-  .box{
+  .box {
     width: 190px;
     left: 24px;
   }
-  .elements1{
+  .elements1 {
     left: 30px;
   }
-  .elements2{
+  .elements2 {
     right: 80px;
   }
 }
 @media screen and (max-width: 768px) {
-  .hero-section{
+  .hero-section {
     height: 140vh;
   }
   .hero-title {
     font-size: 52px;
   }
-  .hero-bottom{
+  .hero-bottom {
     height: 75%;
   }
-  .hero-left,.hero-right {
+  .hero-left,
+  .hero-right {
     width: 60%;
     height: 70%;
   }
@@ -314,39 +315,50 @@
     width: 330px;
     margin-bottom: 0;
   }
-  .box{
+  .box {
     width: 155px;
     left: 7px;
   }
-  .hero-img1{
+  .hero-img1 {
     width: 60%;
     height: 300px;
   }
-  .hero-img2{
+  .hero-img2 {
     left: 220px;
     width: 33%;
     height: 250px;
   }
-  .elements1{
-    top: 10px;
-    transform: scale(0.7) !important; 
+  .elements1 {
+    top: 30px;
+    width: 100px;
+    height: 60px;
   }
-  .elements2{
-    transform: scale(0.7) !important;
+  .elements2 {
+    width: 100px;
+    height: 60px;
+    bottom: 70px;
+  }
+  .user1,.user2{
+    width: 60px;
+    height: 22px;
+    font-size: 12px;
+  }
+  .arrowBlack,.arrowRed{
+    transform: scale(0.7);
   }
 }
 @media screen and (max-width: 630px) {
-  .hero-img1{
+  .hero-img1 {
     left: 60px;
   }
-  .hero-img2{
+  .hero-img2 {
     width: 35%;
     left: 180px;
   }
-  .elements1{
-    left: 0;
+  .elements1 {
+    left: 20px;
   }
-  .elements2{
+  .elements2 {
     right: 20px;
     bottom: 70px;
   }
@@ -358,44 +370,53 @@
   .hero-content {
     font-size: 22px;
   }
-  .hero-bottom{
+  .hero-bottom {
     height: 51%;
   }
-  .hero-left,.hero-right {
+  .hero-left,
+  .hero-right {
     width: 60%;
     height: 80%;
   }
-  .hero-lorem{
+  .hero-lorem {
     font-size: 20px;
     width: 300px;
     display: flex;
     align-items: center;
   }
-  .box{
+  .box {
     width: 140px;
     top: 32px;
   }
-  .hero-img1{
+  .hero-img1 {
     left: 50px;
   }
-  .hero-img2{
+  .hero-img2 {
     left: 150px;
     width: 40%;
   }
-  .hero-section{
+  .hero-section {
     height: 140vh;
   }
-  .elements1{
-    left: 0;
-    top: 30px;
+  .elements1 {
+    left: 20px;
+    top: 60px;
   }
-  .elements2{
-    right: 20px;
+  .elements2 {
+    right: 60px;
     bottom: 40px;
+  }
+  .user1,.user2{
+    width: 60px;
+    height: 22px;
+    font-size: 12px;
+  }
+  .arrowBlack,.arrowRed{
+    transform: scale(0.6);
   }
 }
 @media screen and (max-width: 530px) {
-  .hero-section{
+  .hero-section {
     height: 120vh;
   }
   .hero-title {
@@ -404,56 +425,60 @@
   .hero-content {
     font-size: 20px;
   }
-  .hero-bottom{
+  .hero-bottom {
     height: 50%;
   }
-  .hero-left,.hero-right {
+  .hero-left,
+  .hero-right {
     width: 60%;
     height: 80%;
   }
-  .hero-lorem{
+  .hero-lorem {
     font-size: 20px;
     width: 250px;
   }
-  .box{
+  .box {
     width: 140px;
     top: 20px;
     left: 12px;
   }
-  .hero-img1{
+  .hero-img1 {
     left: 50px;
     height: 250px;
   }
-  .hero-img2{
+  .hero-img2 {
     left: 150px;
     width: 40%;
     height: 200px;
   }
   .elements1{
-    left: 0;
-    top: 0;
+    top: 30px;
   }
   .elements2{
-    bottom: 0px;
+    bottom: 20px;
   }
 }
 @media screen and (max-width: 500px) {
-  .hero-img1{
+  .hero-img1 {
     left: 30px;
   }
-  .hero-img2{
+  .hero-img2 {
     left: 120px;
     width: 40%;
   }
-  .hero-lorem{
+  .hero-lorem {
     margin-bottom: 10px;
   }
+  .elements1{
+    top: 15px;
+  }
   .elements2{
-    bottom: -8px;
+    bottom: 10px;
+    right: 30px;
   }
 }
 @media screen and (max-width: 426px) {
-  .hero-section{
+  .hero-section {
     height: 100vh;
   }
   .hero-title {
@@ -474,35 +499,42 @@
     padding: 14px 20px;
     width: 115px;
   }
-  .hero-bottom{
+  .hero-bottom {
     height: 45%;
   }
-  .hero-lorem{
+  .hero-lorem {
     font-size: 18px;
     width: 220px;
   }
-  .box{
+  .box {
     width: 125px;
     top: 28px;
     left: 10px;
   }
-  .hero-img1{
+  .hero-img1 {
     left: 30px;
     height: 200px;
   }
-  .hero-img2{
+  .hero-img2 {
     left: 110px;
     height: 160px;
   }
   .elements1{
-    left: -10px;
-    top: -10px;
-    transform: scale(0.5) !important;
+    top: 6px;
+    width: 90px;
+    left: 10px;
   }
   .elements2{
-    right: 0px;
-    bottom: -12px;
-    transform: scale(0.5) !important;
+    width: 90px;
+    bottom: 8px;
+    right: 30px;
+  }
+  .user1,.user2{
+    width: 50px;
+    font-size: 10px;
+  }
+  .arrowBlack,.arrowRed{
+    transform: scale(0.5);
   }
 }
 
@@ -523,31 +555,24 @@
     padding: 12px 18px;
     width: 110px;
   }
-  .hero-img1{
+  .hero-img1 {
     left: 20px;
     width: 65%;
   }
-  .hero-img2{
+  .hero-img2 {
     left: 100px;
     width: 40%;
   }
-  .hero-lorem{
+  .hero-lorem {
     font-size: 16px;
     width: 200px;
   }
-  .box{
+  .box {
     width: 110px;
     top: 35px;
     left: 11px;
   }
-  .elements1{
-    top: -5px;
-    left: -20px;
-  }
-  .elements2{
-    right: -10px;
-    bottom: 0px;
-  }
+
 }
 @media screen and (max-width: 320px) {
   .schedule-call {
@@ -560,22 +585,22 @@
     padding: 12px 14px;
     width: 95px;
   }
-  .hero-img1{
+  .hero-img1 {
     left: 20px;
     width: 65%;
   }
-  .hero-img2{
+  .hero-img2 {
     width: 45%;
     left: 82px;
   }
-  .hero-lorem{
+  .hero-lorem {
     font-size: 14px;
     width: 180px;
   }
-  .hero-title{
+  .hero-title {
     font-size: 28px;
   }
-  .box{
+  .box {
     width: 100px;
     top: 43px;
     left: 9px;
