--- a/src/css/Call.css
+++ b/src/css/Call.css
@@ -27,31 +27,36 @@
     margin-top: 2vh;
     border: 1px solid var(--www-withsupafast-com-2114444580078125-x-9544444580078125-default-cod-gray, #131313);;
     width: 45vw;
+    max-width: 740px;
+
 }
 
 .call_inputs form{
     margin-top: 4vh;
     display: flex;
     flex-direction: row;
+    gap: 1vw;
     width: 45vw;
+    max-width: 740px;
     height: max-content;
     align-items: center;
 }
 
 .call_inputs input{
     background-color: #FFF;
-    border-radius: 10px;
+    border-radius: 8px;
     border: none;
     padding-left: 2vw;
     width: 33vw;
-    padding-right: 10vw;
     height: 6vh;
+    max-height: 60px;
     z-index: 0;
 }
 
 .grades{
     display: flex;
     width: max-content;
+    max-width: 740px;
     gap: 2vw;
 }
 
@@ -79,13 +84,13 @@
     border: none;
     color: #E6E6E6;
     padding: 0vh 1vw;
+    font-size: 0.9rem;
     font-weight: 700;
+    max-height: 60px;
     background: rgba(212, 23, 23, 0.75);
-    border-radius: 10px;
-    height: 5vh;
-    position: absolute;
+    border-radius: 8px;
+    height: 6vh;
     z-index: 1;
-    right: 28vw;
 }
 
 @media screen and (max-width:768px) {
@@ -93,34 +98,46 @@
         width: 98vw;
     }
 
+    .callhead p{
+        text-align: center;
+        font-size: 0.9rem;
+        font-weight: 500;
+    }
+
+    .callhead h2{
+        margin-top: 4vh;
+        margin-bottom: 0vh;
+    }
+
     .call_line{
         width: 91vw;
     }
 
     .call_inputs form {
+        display: flex;
+        justify-content: center;
         width: 78vw;
     }
 
     .call_inputs input{
         font-size: 0.7rem;
         width: 50vw;
+        height: 5vh;
+        padding-left: 4vw;
         padding-right: 25vw;
-        border-radius: 9px;
+        border-radius: 8px;
     }
 
     .call_inputs button{
+        height: 4vh;
         padding: 0vh 2vw;
-        font-size: 0.7rem;
-        border-radius: 9px;
+        font-size: 0.65rem;
+        border-radius: 8px;
         position: absolute;
-        right: 14vw;
+        right: 12.5vw;
     }
 
-    .gradecontent{
-        width: 30vw;
-    }
-
-    .gradecontent p{
-        font-size: 0.6rem;
+    .grades{
+        display: none;
     }
 }
