--- a/src/css/About.css
+++ b/src/css/About.css
@@ -2,7 +2,7 @@
   height: 85vh;
   background: #222222;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-evenly;
   align-items: center;
 }
 
@@ -165,6 +165,7 @@
 }
 
 #Unleash {
+  /* margin-top: -15px; */
   text-align: center;
   font-weight: 500;
 }
@@ -265,6 +266,13 @@
     .talk-btn{
       margin: -20px 0 0 32px;
     }
+
+    #Unleash {
+      margin-top: -15px;
+      
+    }
+
+    
 }
 
 @media(max-width: 300px){
