--- a/src/css/Call.css
+++ b/src/css/Call.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     font-family: 'Inter' sans-serif;
-    width: 100vw;
+    width: 100%;
     background-color: #E6E6E6;
     height: max-content;
     padding-bottom: 5vh;
