--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -380,18 +380,24 @@
   .email {
     font-size: 16px;
   }
+  .footer-container-top{
+    flex-direction: column;
+  }
   .top-left {
-    width: 225px;
+    width: 100%;
+    height: 80%;
   }
   .footer-logo {
     margin-top: 15px;
   }
   .top-right {
-    width: 120px;
-    align-items: flex-end;
+    align-items: center;
+    flex-direction: row;
+    width: 100%;
+    height: 100px;
   }
   .footer {
-    height: 360px;
+    height: 350px;
   }
   .top-right-1 {
     width: 100px;
@@ -407,7 +413,7 @@
     font-size: 11px;
   }
   .top-left-1 {
-    margin-top: 50px;
+    margin-top: 25px;
   }
   .footer-content {
     margin-top: 35px;
@@ -419,6 +425,24 @@
   .footer-content{
     margin-top: 20px;
     margin-bottom: 20px;
+  }
+  .footer-container-top{
+    height: 100%;
+  }
+  .footer-container{
+    height: 100%;
+  }
+  .top-right-2{
+    height: 100%;
+  }
+  .top-left-2{
+    height: 80%;
+  }
+  .footer-nav{
+    align-items: flex-end;
+  }
+  .footer-ul{
+    padding: 0;
   }
 }
 @media screen and (max-width: 375px) {
