--- a/src/css/About.css
+++ b/src/css/About.css
@@ -18,7 +18,6 @@
 
 .paraTag2 {
   width: 30vw;
-  font-family: Inter;
   font-size: 18px;
   font-weight: 300;
   line-height: 30px;
@@ -28,9 +27,11 @@
 }
 
 .lists {
+  font-family: Inter;
   color: white;
   width: 30vw;
   margin-left: -10px;
+  font-weight: 300;
 }
 
 .join-btn {
@@ -191,11 +192,11 @@
 @media(max-width: 1024px){
 
   .about-sec{
-    height: 85vh;
+    height: 60vh;
   }
 
     .about-heading{
-        width: 47vw;
+        width: 50vw;
     }
 
     .paraTag2{
@@ -215,34 +216,52 @@
 
 }
 
+@media(max-height: 600px){
+  .about-sec{
+    height: 85vh;
+  }
+}
+
+
+
 @media(max-width: 555px){
 
   .about-sec{
-    height: 65vh;
+    height: 85vh;
+    flex-direction: column-reverse;
+    align-items: normal;
+    padding: 2rem;
+
   }
+
+  
+
   .about-heading{
-    font-size: 17px;
+    width: 70vw;
+    font-size: 25px;
     letter-spacing: 0;
   }
 
   .paraTag2{
-    font-size: 12px;
+    width: 60vw;
+    font-size: 13px;
     line-height: 20px;
   }
 
   .lists{
-    font-size: 12px;
-    width: 42vw;
+    font-size: 13px;
+    width: 53vw;
     margin-left: -28px;
   }
 
   .image-sec{
-    width: 45vw;
+    width: 85vw;
+    height: 35vh;
   }
 
   .about-img{
-    height: 22vh;
-    width: 38vw;
+    height: 30vh;
+    width: 75vw;
   }
 
 
@@ -272,25 +291,32 @@
       
     }
 
+   
     
 }
 
 @media(max-width: 300px){
+
+  .about-container{
+    margin-left: -10px;
+  }
+
   .about-heading{
-    font-size: 9px;
+    font-size: 17px;
   }
 
   .paraTag2{
-    font-size: 8px;
-    line-height: 10px;
+    width: 66vw;
+    font-size: 10px;
+    line-height: 14px;
+
   }
 
   .lists{
-    font-size: 8px;
-    width: 39vw;
+    font-size: 10px;
   }
 
-  .join-btn{
+  /* .join-btn{
     width: 118px;
-  }
+  } */
 }
